tests/errors/semantic/blocking/DISCARD_SET_INCOMPATIBLE_TYPES_1.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {7, 9, 1}
b = 2j
a.discard(b)
